# entativa

./: README.md  p.py
entativa/: .env.example  .gitignore  Cargo.toml  README.md  build.rs
entativa/proto/: entativa.proto
entativa/src/: app.rs  client.rs  config.rs  main.rs  navigation.rs  state.rs
entativa/src/screens/: feed.rs  mod.rs  profile.rs  upload.rs
entativa/tests/: feed_tests.rs  upload_tests.rs
